--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passport-oauth2",
+  "name": "passport-groupme",
   "version": "1.4.0",
   "description": "OAuth 2.0 authentication strategy for Passport.",
   "keywords": [
@@ -13,16 +13,16 @@
     "oauth2"
   ],
   "author": {
-    "name": "Jared Hanson",
-    "email": "jaredhanson@gmail.com",
+    "name": "Andrew Wiik",
+    "email": "cardflourish101@gmail.com",
     "url": "http://www.jaredhanson.net/"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/jaredhanson/passport-oauth2.git"
+    "url": "git://github.com/andrewwiik/passport-groupme.git"
   },
   "bugs": {
-    "url": "http://github.com/jaredhanson/passport-oauth2/issues"
+    "url": "http://github.com/andrewwiik/passport-groupme/issues"
   },
   "license": "MIT",
   "licenses": [
